--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,14 +2,14 @@
     color: #97c93e !important
 }
 .colonavar{
-    background: #645ac2;
+    background: #1906c2;
 }
 .header img{
     width: 100px;
     height: 100px;
 }
 .colornav{
-   background-color: rgb(50, 170, 90);
+   background-color: rgb(37, 71, 48);
 }
  
 #main .carousel-inner img{
