--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,13 +15,15 @@
 }
  
 #main .carousel-inner img{
-    max-width: 800vh;
-    max-height: 455px;
+    max-width: 1000vh;
+    max-height: 500px;
     object-fit: cover;
     filter: grayscale(70%);
 }
 #carousel{
     position: relative;
+    opacity :15s ease;
+
 }
 #carousel .overlay {
     z-index: 1;
