--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,13 +7,15 @@
   }
   
   #main .carousel-inner img {
-    max-height: 90vh;
+    max-height: 70vh;
     object-fit: cover;
-    filter: grayscale(80%);
+    filter: grayscale(70%);
   }
   
   #carousel {
     position: relative;
+    
+    opacity :10s ease;
   }
   
   #carousel .overlay {
@@ -66,3 +68,6 @@
   #footer a {
     color: white;
   }
+
+
+  
