--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -69,5 +69,38 @@
     color: white;
   }
 
+ /*btn flotante*/
+ .burbuja-chat {
+  height: 115px !important;
+  position: absolute !important;
+  z-index: 200;
+  bottom: -18px;
+  right: 77px;
+}
 
-  
+.btn-wsp {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  line-height: 86px;
+  bottom: 30px;
+  right: 30px;
+  background: #0EC244;
+  color: aliceblue;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 0px 1px 10px rgba(red, green, blue, alpha);
+  z-index: 100;
+  margin: 0.8rem!important;
+
+}
+
+.btn-wsp:hover {
+  text-decoration: none;
+  color: seagreen;
+  background: rgb(255, 254, 255); 
+}
+.m-2{
+  margin: 0.8rem!important;
+}
